[gd_scene load_steps=3 format=3 uid="uid://b21texumt3eio"]

[ext_resource type="PackedScene" uid="uid://2cftnam31qlk" path="res://src/UI/Components/input.tscn" id="1_wfhle"]
[ext_resource type="Script" path="res://src/UI/MenuBar/Preference/Scripts/general_panel.gd" id="1_yuqnp"]

[node name="GeneralPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_yuqnp")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="FontSizeInput" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
type = 2
name_label = "KEY_FONT_SIZE"
suffix_label = "Px"

[node name="RawPathInput" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
name_label = "KEY_RAW_PATH"

[node name="CleanedPathInput" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
name_label = "KEY_CLEANED_PATH"

[node name="TextFilenameInput" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
name_label = "KEY_TEXT_FILENAME"

[node name="ServerLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_SERVER
"

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="URLInput" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
name_label = "KEY_URL"

[node name="PortInput" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
name_label = "KEY_PORT"

[node name="CameraLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_CAMERA"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MinZoomInput" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
type = 1
name_label = "KEY_MIN_ZOOM"
step = 0.1

[node name="MaxZoomInput" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
type = 1
name_label = "KEY_MAX_ZOOM"
step = 0.1

[node name="ZoomRateInput" parent="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_wfhle")]
layout_mode = 2
type = 1
name_label = "KEY_ZOOM_RATE"
step = 0.1

[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/FontSizeInput" to="." method="_on_font_size_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/RawPathInput" to="." method="_on_raw_path_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/CleanedPathInput" to="." method="_on_cleaned_path_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/TextFilenameInput" to="." method="_on_text_filename_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/URLInput" to="." method="_on_url_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PortInput" to="." method="_on_port_input_2_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MinZoomInput" to="." method="_on_min_zoom_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MaxZoomInput" to="." method="_on_max_zoom_input_changed"]
[connection signal="changed" from="ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ZoomRateInput" to="." method="_on_zoom_rate_input_changed"]
